# Readable-Lisp-S-expressions

./: .gitignore  AUTHORS  Analysis.md  ChangeLog  Common-lisp-tutorial.md  Examples.md  Hunchentoot-make-docstrings.md  INSTALL  Install-howto.md  Makefile  Makefile-demo  Makefile.am  Prepackaged.md  Problem.md  README  README-ANTLR  README-files  Rationale.md  Retort.md  SRFI-105.html  SRFI-110.html  SRFI-curly.html  SRFI-sweet.html  Scheme-tutorial.md  Solution.md  TODO  arne-formulation.scm  backquote.lisp  basic-curly-clisp  basic-curly.cl  basic-curly.lisp  common-lisp-tutorial.md  configure.ac  curly-infix-test  curly-infix.cl  enablers.lisp  factorial.lisp  factorial.slisp  get-from-wiki  head.html  (+62 more)
amkg-work/: README  tokenizer.scm  tokenizer.test
biwascheme/: .gitignore  README  preprocess-biwa.scm  sweetbiwa.html.in
code-samples/: srfi-13.scm  srfi-13.sscm  srfi-6.scm  srfi-6.sscm  srfi-9.scm  srfi-9.sscm
example/: list-of.scm  list-of.sscm  simple-nfx.scm  simple-nfx.sscm  streams.scm  streams.sscm
examples/: Makefile.example  README  basic-sweet.sscm  list-of.sscm  simple-nfx.sscm  streams.sscm  sweet-run-demo  sweet-run-demo-clisp  sweet-run-demo-scsh  sweet-simple.sscm
lab/: README  iexpr.scm  iformat-buggy.scm  iformat.cl  infpre.lisp  modern.cl  scheme-to-cl  spec-indent.txt  sugar-original.scm  sugar.scm  sweet-pprint.scm
lab/tests/: sugar-test.scm
m4/: DUMMY
man/: diff-s-sweet.1  sweet-clisp.1  sweet-run.1  sweeten.1  unsweeten.1
output/: Test.java  Unsweeten_ANTLR.java  correct.txt  go  go.bat  input.txt  output.txt  unsweeten-bnf
output/scheme/: Pair.java
readable/: sweet-impl.scm
src/: curly-guile  diff-s-sweet  kernel.scm  neoteric-guile  same-sweet-result  srfi-curly-infix.scm  srfi-neoteric.scm  sweet-clisp  sweet-guile  sweet-impl.scm  sweet-run  sweet-sbcl  sweet-scsh  sweeten  sweeten.old  sweeten.sscm  sweeten_header  unsweeten
tests/: all-test  curly-infix-correct2  curly-infix-test  curly-infix-test-cl  curly-infix-test-scm  curly-infix-testsuite-scm  curly-infix-testsuite2  fact9  full-test-cl  math-test  math-test-correct  modern-cl-test  modern-scm-test.scm  neoteric-cl-test  neoteric-scm-test  neoteric-scm-test.scm  neoteric-test  neoteric-testsuite  pprint  roundtrip-test  roundtrip-testsuite  sugar-test.scm  sweet-test  sweet-testsuite  sweeten-correct  sweeten-testsuite  test-cases-modern  test-cases-neoteric  unsweeten-cl-correct  unsweeten-cl-testsuite  unsweeten-correct  unsweeten-testsuite  write-test  write-test-correct
